--- a/index.html
+++ b/index.html
@@ -20,14 +20,7 @@
             </div>
         </header>
         
-        <!-- Navigation Links-->
-        <nav class="nav">
-          <a class="nav-link" href="#">Home</a>
-          <a class="nav-link" href="#">Link</a>
-          <a class="nav-link" href="#">Link</a>
-        </nav>
-        <br />
-        <br />
+        <!-- Play Area border -->
         <div id="game-screen">
             <!-- Paytable Grid -->
             <div id="paytable">
