randomized card draw, and added setHold

--- a/index.html
+++ b/index.html
@@ -119,19 +119,19 @@
             </div>
             <div class="card-container">
                 <div class="cards">
-                    <img src="img/cards/BK.gif" class="card">
+                    <img src="img/BK.gif" class="card" id="card1">
                 </div>
                 <div class="cards">
-                    <img src="img/cards/BK.gif" class="card">
+                    <img src="img/BK.gif" class="card" id="card2">
                 </div>
                 <div class="cards">
-                    <img src="img/cards/BK.gif" class="card">
+                    <img src="img/BK.gif" class="card" id="card3">
                 </div>
                 <div class="cards">
-                    <img src="img/cards/BK.gif" class="card">
+                    <img src="img/BK.gif" class="card" id="card4">
                 </div>
                 <div class="cards">
-                    <img src="img/cards/BK.gif" class="card">
+                    <img src="img/BK.gif" class="card" id="card5">
                 </div>
             </div>
             
