--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     </title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="css/styles.css" rel="stylesheet" type="text/css" />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="js/script.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js" type="text/javascript"></script>
+    <script src="js/script.js" type="text/javascript"></script>
     </head>
     <body>
         
@@ -110,14 +110,17 @@
             <!--  -->
             <br />
             <br />
-            <div id="card-holds">
-                <div class="card-held">Held</div>
-                <div class="card-held">Held</div>
-                <div class="card-held">Held</div>
-                <div class="card-held">Held</div>
-                <div class="card-held">Held</div>
-            </div>
+            <!--<div id="card-holds">-->
+            <!--    <div class="card-held">Held</div>-->
+            <!--    <div class="card-held">Held</div>-->
+            <!--    <div class="card-held">Held</div>-->
+            <!--    <div class="card-held">Held</div>-->
+            <!--    <div class="card-held">Held</div>-->
+            <!--</div>-->
             <div class="card-container">
+                <div class="cards">
+                    <img src="img/BK.gif" class="card" id="card0">
+                </div>
                 <div class="cards">
                     <img src="img/BK.gif" class="card" id="card1">
                 </div>
@@ -129,9 +132,6 @@
                 </div>
                 <div class="cards">
                     <img src="img/BK.gif" class="card" id="card4">
-                </div>
-                <div class="cards">
-                    <img src="img/BK.gif" class="card" id="card5">
                 </div>
             </div>
             
