added base functionality to bet buttons

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
             <div id="play-buttons">
                 <div class="play-grid-item">
                     <button type="button" id="increase-bet" class="play-grid-item1 btn btn-primary btn-lg"> + </button>
-                    <span id="bet-text" class="play-grid-item1">BET</span>
+                    <span id="bet-text" class="play-grid-item1">1</span>
                     <button type="button" id="decrease-bet" class="play-grid-item1 btn btn-primary btn-lg"> - </button>
                 </div>
                 <button type="button" id="bet-one" class="play-grid-item btn btn-primary btn-lg"> BET ONE </button>
